deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: alpinex-service
spec:
  selector:
    app: alpinex
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpinex-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alpinex
  template:
    metadata:
      labels:
        app: alpinex
    spec:
      containers:
      - name: alpinex-container
        image: viki-vik/nginx-alpine:1.0
        ports:
        - containerPort: 8080
