service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-vik-svc
  namespace: default
spec:
  type: NodePort
  selector:
    app: kube-vik-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 32001
