ingress.yaml
apiVersion: extensions/v1beta
kind: Ingress
metadata:
  name: web
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target:"/"
spec:
  rules:
    - http:
        paths:
          - path: "/"
            backend:
              serviceName: kube-vik-svc
              servicePort: 80
